--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,14 @@ development:
   username: postgres
   password: password
   encoding: UTF8
+  
+production:
+  adapter: postgresql
+  database: icmsapmm_production
+  host: localhost
+  username: postgres
+  password: password
+  encoding: UTF8
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
